# agent-provenance-site

./: CONTEXT.md  ideas.md  package.json  pnpm-lock.yaml  todo.md
client/: index.html
client/src/: App.tsx  const.ts  index.css
client/src/components/: Footer.tsx  Nav.tsx
client/src/pages/: About.tsx  ApiKeys.tsx  AuditTool.tsx  DecisionLog.tsx  Developers.tsx  Home.tsx  Platform.tsx  PreciselyIntegration.tsx  Pricing.tsx  ReportViewer.tsx  Sandbox.tsx  Solutions.tsx
docs/: index.html
drizzle/: 0001_add_stripe_columns.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
sdk/: README.md  pyproject.toml
sdk/agentprovenance/: __init__.py  client.py  decorators.py  models.py
server/: adminRouter.ts  audit.test.ts  auditRouter.ts  db.ts  decisionsRouter.ts  demoRouter.ts  gio.test.ts  gioRouter.ts  products.ts  reportRouter.ts  routers.ts  scoreRouter.ts  stripeRouter.ts  stripeWebhook.ts  v1Router.ts
server/_core/: index.ts
