[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentprovenance"
version = "0.1.0"
description = "Instrument your AI agents for EU AI Act compliance — capture decision traces, audit trails, and fleet-wide governance."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "compliance", "eu-ai-act", "audit", "provenance", "langchain", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # Zero external dependencies — stdlib only

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://agentprovenance.io"
Documentation = "https://agentprovenance.io/developers"
Repository = "https://github.com/agentprovenance/agentprovenance-python"
Issues = "https://github.com/agentprovenance/agentprovenance-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentprovenance*"]
